[package]
name = "teehee"
description = "Hex editor with inspiration from Vim, Kakoune and Hiew"
version = "0.1.0"
authors = ["Gskartwii <ahannula4@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/Gskartwii/teehee"
keywords = ["cli", "terminal", "editor"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5"
xi-rope = "0.3.0"
lazy_static = "1.4.0"
jetscii = "0.4.4"
regex = "1"
